--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.4",
     "gsap": "^3.12.7",
+    "jotai": "^2.12.3",
     "lucide-react": "^0.501.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
